--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^19.2.1",
     "lucide-react": "^0.556.0",
     "react-dom": "^19.2.1",
-    "jspdf": "^3.0.4"
+    "jspdf": "^3.0.4",
+    "@vitejs/plugin-react": "^5.1.2",
+    "vite": "^7.2.7"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
